--- a/src/app/Components/aliados/aliados.component.html
+++ b/src/app/Components/aliados/aliados.component.html
@@ -1,40 +1,37 @@
 <app-nav></app-nav>
 <!-- Inicio container. -->
-<div class="container">
 <!-- h1 -->
 <h1 class="text-center mb-12"> ALIADOS </h1>
+<div class="container d-flex">
   <!-- Inicio fila 1. -->
   <div class="row justify-content-center">
     <!-- Inicio columna 1 de fila 1. -->
-    <div class="col-md-4">        
-      <div class="card ml-16">
+    <div class="col-md-3">        
+      <div class="card">
         <div class="card-img">
-          <img src="../../../assets/img/asoc1.png" class="img1"  alt="">        
+          <a href="https://martadero.org/quienes-somos/"><img src="../../../assets/img/asoc1.png" class="img1"  alt=""></a>        
         </div>
       </div>
     </div>
     <!-- Inicio columna 2 de fila 1. -->
-    <div class="col-md-4">
-      <div class="card ml-16 mt-16" id="card2">
+    <div class="col-md-3">
+      <div class="card">
         <div class="card-img">
-          <img src="../../../assets/img/asoc2.svg" class="img2" alt="">                   
+          <a href="https://openlab.ec/presentacion"><img src="../../../assets/img/asoc2.png" class="img2" alt=""></a>                   
         </div>
       </div>
     </div>
     <!-- Inicio columna 3 de fila 1. -->
-    <div class="col-md-4">
-      <div  class="card ml-16" >
+    <div class="col-md-3">
+      <div  class="card" >
         <div class="card-img ">
           <img src="../../../assets/img/asoc3.svg" class="img1" alt="">        
         </div>
       </div>
-    </div> 
-  </div>
-  <!-- Inicio fila 2. -->
-  <div class="row justify-content-center">
-    <!-- Inicio columna 1 de fila 2. -->
-    <div class="col-md-4 mt-16">        
-      <div class="card ml-16 mb-16">
+    </div>   
+    <!-- Inicio columna 4 de fila 1. -->
+    <div class="col-md-3">        
+      <div class="card">
         <div class="card-img">
           <img src="../../../assets/img/asoc4.jpg" class="img1"  alt="">        
         </div>
