--- a/src/app/Components/home/home.component.html
+++ b/src/app/Components/home/home.component.html
@@ -1,29 +1,22 @@
+<!-- Inicio Container. -->
 <div class="home-container">
-  <div class="d-flex justify-content-center">
-    <div class="logo">
-      <img class="home-sombra" src="../../../assets/img/mancha de tinta.svg" />
-      <img class="home-logo" src="../../../assets/img/Home/keta1.svg" />
-    </div>
+  <!-- Logo. -->
+  <div class="logo">
+    <img class="home-sombra" src="../../../assets/img/mancha de tinta.svg" />
+    <img class="home-logo" src="../../../assets/img/Home/keta1.svg" />
   </div>
- 
- 
-  <div class="candado-cuentas">
-  <div class="d-flex justify-content-center">
-    <div class="p-2"><img class="home-candado" routerLink="/inicio" src="../../assets/img/Home/candado.svg" />
-    </div>
+  <!-- Candado. -->
+  <div class="p-2">
+    <img class="home-candado" routerLink="/inicio" src="../../assets/img/Home/candado.svg" />
   </div>
-  
-  <div class="d-flex justify-content-center">
-    <div class=""><a routerLink="/inicio">{{ "HOME.SERVICES" | translate }}</a>
-    </div>
+  <!-- Texto. -->
+  <div class="text">
+    <a routerLink="/inicio">{{ "HOME.SERVICES" | translate }}</a>
   </div>
-
+  <!-- Redes Sociales -->
   <div class="d-flex justify-content-end pr-5">
-    <a href="https://www.facebook.com/ketanolabsrl/" target="blank"><img class="px-2 home-facebook" src="../../assets/img/Home/facebook.svg" /></a>
-    <a href="https://twitter.com/KetanoLab" target="blank"><img class="px-2 home-in" src="../../assets/img/Home/in.svg" /></a>
-    <a href="https://www.linkedin.com/company/76603728/" target="blank"><img class="px-2 home-twiter" src="../../assets/img/Home/twiter.svg" /></a>
+    <a href="https://www.facebook.com/ketanolabsrl/" target="_blank"><img class="px-2 home-facebook" src="../../assets/img/Home/facebook.svg" /></a>
+    <a href="https://www.linkedin.com/company/76603728/" target="_blank"><img class="px-2 home-in" src="../../assets/img/Home/in.svg" /></a>
+    <a href="https://twitter.com/KetanoLab" target="_blank"><img class="px-2 home-twiter" src="../../assets/img/Home/twiter.svg" /></a>
   </div>
-  
-</div>
-
 </div>
