--- a/src/app/Components/nav/nav.component.css
+++ b/src/app/Components/nav/nav.component.css
@@ -1,868 +1,24 @@
-.bg-ketanolab {
-    background-image: url("../../../assets/img/Inicio/bara.svg");
-    background-repeat: no-repeat;
-    background-position-y: 60px;
-    background-position-x: 50%;
-    background-size: 120rem;
+
+#menu li {
+    position: relative;
+    left: 16rem;
+    margin-left: 2rem;
+    font-size: large;
+}
+/* Efecto al pasar el mouse */
+#menu li :hover {
+    background-color: rgb(0,0,0);
+    color: skyblue;
 }
 
 .navbar-brand {
-    width: 9.5rem;
-    line-height: 1;
-    margin-right: 3rem;
-}
-
-.navbar-nav {
-    margin-left: 11rem;
+    width: 6rem;
+    position: relative;
+    left: 4rem;
+    
 }
 
 a {
     font-family: 'Orbitron';
     color: #fff;
-}
-
-/* Creé las clases ".text-nav-1" , ".text-nav-2" , ".text-nav-3" ,y ".text-nav-4", para personalizar el texto
-de los botones del nav, porque al hacer el responsive, es necesario contraer su tamaño y cambiarle de posición */
-
-.text-nav-1 {
-    display: inline-block;
-    position: relative;
-    top: -0.4rem;
-    left: 1.8rem;
-    font-size: 15px;
-}
-
-.text-nav-2 {
-    display: inline-block;
-    position: relative;
-    top: -0.4rem;
-    left: 1%;
-    font-size: 15px;
-}
-
-.text-nav-3 {
-    display: inline-block;
-    position: relative;
-    top: -0.5rem;
-    left: 0.2rem;
-    font-size: 15px;
-}
-
-.text-nav-4 {
-    display: inline-block;
-    position: relative;
-    top: -0.5rem;
-    left: 1rem;
-    font-size: 15px;
-}
-
-/* Creé las clases ".nav-link_1" , ".nav-link_2" , ".nav-link_3" ,y ".nav-link_4", para personalizar el tamaño en el eje x, 
-de los botones del nav, individualmente, ya que varían mucho al hacer responsive. */
-
-.nav-link_1 {
-    line-height: 9.5;
-    text-transform: uppercase;
-    width: 11.5rem;
-}
-
-.nav-link_2 {
-    line-height: 9.5;
-    text-transform: uppercase;
-    width: 19rem;
-}
-
-.nav-link_3 {
-    line-height: 9.5;
-    text-transform: uppercase;
-    width: 11.5rem;
-}
-
-.nav-link_4 {
-    line-height: 9.5;
-    text-transform: uppercase;
-    width: 10.5rem;
-}
-
-/* Éstas clases modifican el elemento span, y afectan al padding y margen de la imagen de fondo
-usado en los botones del nav (cambié los pixeles por rem, para aumentar su responsividad) */
-
-.nav-link-1 {
-    padding-top: 18px;
-    padding-bottom: 18px;
-    padding-left: 2rem;
-    padding-right: 3rem;   
-}
-
-.nav-link-1, .nav-link-1::before {
-    background-image: url("../../../assets/img/img/nosotros.png"); 
-    background-repeat: no-repeat;
-}
-
-.nav-link-2 {
-    padding-top: 18px;
-    padding-bottom: 18px;
-    padding-left: 4rem;
-    padding-right: 2rem;
-  }
-
-.nav-link-2, .nav-link-2::before {
-    background-image: url("../../../assets/img/img/nuestra-experiencia.png");
-    background-repeat: no-repeat;
-}
-
-.nav-link-3 {
-    padding-top: 18px;
-    padding-bottom: 18px;
-    padding-left: 4rem;
-    padding-right: 2rem;
-}
-
-.nav-link-3 {
-    background-image: url("../../../assets/img/img/aliados.png");
-    background-repeat: no-repeat;
-}
-
-.nav-link-4 {
-    padding-top: 18px;
-    padding-bottom: 18px;
-    padding-left: 3rem;
-    padding-right: 2rem;
-}
-
-.nav-link-4 {
-    background-image: url("../../../assets/img/img/oficina-virtual.png");
-    background-repeat: no-repeat;
-}
-
-/* Aquí comienza el responsive */
-
-@media (max-width: 1535px) {
-    .navbar-nav {
-        margin-left: 3.5%;
-    }
-}
-
-@media (max-width: 1320px) {
-    .bg-ketanolab {
-        background-size: 140%;
-    }
-
-    .navbar-brand {
-        margin-right: 3.5rem;
-    }
-
-    .navbar-nav {
-        margin-left: 4rem;
-    }
-
-    /* Las clases ".nav-link_1" , ".nav-link_2" , ".nav-link_3" , ".nav-link_4"
-    afectan a los atributos del elemento "a", aquí la uso para modificar el espacio
-    que ocupan en el eje x los botones del nav */ 
-   
-    .nav-link_1 {
-        width: 10.5rem;
-    }
-
-    .nav-link_2 {
-        width: 17.5rem;
-    }
-
-    .nav-link_3 {
-        width: 11.5rem;
-    }   
-
-    .nav-link_4 {
-        width: 19rem;
-    }
-
- 
-    .text-nav-1 {
-        display: inline-block;
-        position: relative;
-        top: -0.7rem;
-        left: -0.3rem;
-        font-size: 12px;
-    }
-    
-    .text-nav-2 {
-        display: inline-block;
-        position: relative;
-        top: -0.6rem;
-        left: -3rem;
-        font-size: 12px;
-    }
-    
-    .text-nav-3 {
-        display: inline-block;
-        position: relative;
-        top: -0.6rem;
-        left: -13%;
-        font-size: 12px;
-    }
-    
-    .text-nav-4 {
-        display: inline-block;
-        position: relative;
-        top: -0.6rem;
-        left: -3rem;
-        font-size: 12px;
-    }
- 
-/* Aquí modifico el tamaño, el padding, y los márgenes de la imagen usada para los botones del nav, de esta forma,
-se le puede visibilziar completa, ordenada, y responsiva */
-
-    .nav-link-1 {
-        padding-left: 4rem;
-        padding-right: 3rem;
-        background-size: 10rem;
-    }
-
-    .nav-link-2 {
-        padding-left: 7rem;
-        padding-right: 3rem;
-        background-size: 17rem;
-    }
-
-    .nav-link-3 {
-        padding-left: 6rem;
-        padding-right: 2rem;
-        background-size: 11rem;
-    }
-
-    .nav-link-4 {
-        padding-left: 7rem;
-        padding-right: 2rem;
-        background-size: 14rem;
-    }
-
-}
-
-@media (max-width: 1296px) {
-    .nav-link_1 {
-        width: 10.3rem;
-    }
-
-    .nav-link_2 {
-        width: 17.3rem;
-    }
-
-    .nav-link_3 {
-        width: 11.3rem;
-    }   
-
-    .nav-link_4 {
-        width: 19rem;
-    }
-
-}
-
-@media (max-width: 1280px) {
-    .navbar-nav {
-        margin-left: 5rem;
-    }
-    
-    .navbar-brand {
-        margin-right: 2.5rem;
-    }    
-}
-
-
-@media (max-width: 1279px) {
-    .navbar-nav {
-        margin-left: -3rem;
-    }    
-}
-
-@media (max-width: 1263px) {
-    
-    .navbar-brand {
-        margin-right: 3.5rem;
-    }    
-
-    /* Aquí cambio el espacio entre botones del nav */
-    
-    .nav-link_1 {
-        width: 10rem;
-    }
-
-    .nav-link_2 {
-        width: 16.5rem;
-    }
-
-    .nav-link_3 {
-        width: 10.5rem;
-    }   
-
-    .nav-link_4 {
-        width: 19rem;
-    }
- 
-    /* Aquí se cambia el tamaño de la imagen de fondo de los botones del nav */
-
-    .nav-link-1 {
-        background-size: 9.5rem 2.7rem;
-    }
-
-    .nav-link-2 {
-        background-size: 16rem 2.7rem;
-    }
-
-    .nav-link-3 {
-        background-size: 10rem 2.7rem;
-    }
-
-    .nav-link-4 {
-        background-size: 14rem 2.7rem;
-    }
-
-    .navbar-nav {
-        background-size: 9rem;
-    }
-
-/* Aquí cambio el tamaño y posición de los textos en los botones del nav */
-    .text-nav-2 {
-        top:-0.6rem;
-        left: -3rem;    
-    }
-
-
-    .text-nav-3 {
-        top:-0.7rem;
-        left: -2rem;       
-
-    }
-
-    .text-nav-4 {
-        top:-0.7rem;
-        left: -3rem;
-    }
-}
-
-@media (max-width: 1247px) {
-    .navbar-nav {
-        margin-left: -2.5rem;
-    }       
-
-    .navbar-brand {
-        margin-right: 3rem;
-    }
-}
-
-@media (max-width: 1214px) {
-    .navbar-nav {
-        margin-left: -2rem;
-    }       
-
-    .navbar-brand {
-        margin-right: 2.5rem;
-    }
-    
-    /* Aquí cambio el espacio entre botones del nav */
-        
-    .nav-link_1 {
-        width: 9.7rem;
-    }
-
-    .nav-link_2 {
-        width: 16.2rem;
-    }
-
-    .nav-link_3 {
-        width: 10.2rem;
-    }   
-
-    .nav-link_4 {
-        width: 18.7rem;
-    }   
-}
-
-@media (max-width: 1181px) {
-    
-    .navbar-brand {
-        margin-right: 3rem;
-    }
-    
-    /* Aquí cambio el espacio entre botones del nav */
-    
-    .nav-link_1 {
-        width: 9.5rem;
-    }
-
-    .nav-link_2 {
-        width: 16rem;
-    }
-
-    .nav-link_3 {
-        width: 10rem;
-    }   
-
-    .nav-link_4 {
-        width: 18.5rem;
-    }
-    
-    
-    /* Aquí se cambia el tamaño de la imagen de fondo de los botones del nav */
-
-    .nav-link-1 {
-        background-size: 9rem 2.7rem;
-    }
-
-    .nav-link-2 {
-        background-size: 15.5rem 2.7rem;
-    }
-
-    .nav-link-3 {
-        background-size: 9.5rem 2.7rem;
-    }
-
-    .nav-link-4 {
-        background-size: 13.5rem 2.7rem;
-    }
-
-    .navbar-nav {
-        background-size: 9rem;
-    }
-       
-    /* Aquí se cambia el tamaño del texto de los botones del nav */
-
-    .text-nav-1 {
-        left: -0.7rem;
-    }
-}
-
-@media (max-width: 1181px) {
-    
-    .navbar-brand {
-        margin-left: 0.5rem;
-    }
-    
-    /* Aquí cambio el espacio entre botones del nav */
-    
-    .nav-link_1 {
-        width: 9.1rem;
-    }
-
-    .nav-link_2 {
-        width: 15.6rem;
-    }
-
-    .nav-link_3 {
-        width: 9.6rem;
-    }   
-
-    .nav-link_4 {
-        width: 18.1rem;
-    }
-       
-}
-
-@media (max-width: 1164px) {
-    .navbar-nav {
-        margin-left: -1rem;
-    }
-
-    .navbar-brand {
-        margin-right: 2rem;
-    }
-}    
-
-@media (max-width: 1131px) {
-    
-    .navbar-brand {
-        margin-left: 0.9rem;
-    }
-    
-    /* Aquí cambio el espacio entre botones del nav */
-    
-    .nav-link_1 {
-        width: 8.9rem;
-    }
-
-    .nav-link_2 {
-        width: 15.4rem;
-    }
-
-    .nav-link_3 {
-        width: 9.4rem;
-    }   
-
-    .nav-link_4 {
-        width: 17.9rem;
-    }
-       
-}
-
-@media (max-width: 1115px) {
-        
-    .navbar-brand {
-        margin-left: 2rem;
-    }
-
-    /* Aquí se cambia el tamaño de la imagen de fondo de los botones del nav */
-
-    .nav-link-1 {
-        background-size: 8rem 2.7rem;
-    }
-
-    .nav-link-2 {
-        background-size: 14.5rem 2.7rem;
-    }
-
-    .nav-link-3 {
-        background-size: 8.5rem 2.7rem;
-    }
-
-    .nav-link-4 {
-        background-size: 12.5rem 2.7rem;
-    }
-    
-    /* Aquí cambio el espacio entre botones del nav */
-    
-    .nav-link_1 {
-        width: 8.4rem;
-    }
-
-    .nav-link_2 {
-        width: 14.9rem;
-    }
-
-    .nav-link_3 {
-        width: 8.9rem;
-    }   
-
-    .nav-link_4 {
-        width: 8rem;
-    }
-
-    /* Aquí se cambia el tamaño y posición izquierda del texto de los botones del nav */
-
-    .text-nav-1 {
-        font-size: 11px;
-        left: -1.1rem;
-    }
-
-    .text-nav-2 {
-        font-size: 11px;
-    }
-
-    .text-nav-3 {
-        font-size: 11px;
-    }
-
-    .text-nav-4 {
-        font-size: 11px;
-    }
-
-}
-
-@media (max-width: 1065px) {
-    
-    .navbar-brand {
-        margin-left: 2.5rem;
-    }
-    /* Aquí cambio el espacio entre botones del nav */
-    
-    .nav-link_1 {
-        width: 8rem;
-    }
-
-    .nav-link_2 {
-        width: 14.5rem;
-    }
-
-    .nav-link_3 {
-        width: 8.5rem;
-    }   
-
-    .nav-link_4 {
-        width: 8rem;
-    }
-
-}
-
-@media (max-width: 1049px) {    
-    .navbar-nav {
-        position: relative;
-        top: -0.2rem;
-    }    
-}
-
-@media (max-width: 1032px) {
-    
-    .navbar-brand {
-        margin-right: 3rem;
-    }
-    
-    /* Aquí se cambia el tamaño de la imagen de fondo de los botones del nav */
-
-    .nav-link-1 {
-        background-size: 7.3rem 2.7rem;
-    }
-
-    .nav-link-2 {
-        background-size: 13.8rem 2.7rem;
-    }
-
-    .nav-link-3 {
-        background-size: 7.8rem 2.7rem;
-    }
-
-    .nav-link-4 {
-        background-size: 11.8rem 2.7rem;
-    }       
-
-    /* Aquí cambio el espacio entre botones del nav */
-    
-    .nav-link_1 {
-        width: 7.5rem;
-    }
-
-    .nav-link_2 {
-        width: 14rem;
-    }
-
-    .nav-link_3 {
-        width: 8rem;
-    }   
-
-    .nav-link_4 {
-        width: 7rem;
-    }
-
-
-    /* Aquí se cambia el tamaño y posición izquierda del texto de los botones del nav */
-
-    .text-nav-1 {
-        font-size: 10px;
-        left: -1.5rem;
-    }
-
-    .text-nav-2 {
-        font-size: 10px;
-        top:-0.7rem;
-        left: -3.5rem;
-    }
-
-    .text-nav-3 {
-        font-size: 10px;
-        left: -3rem;
-    }
-
-    .text-nav-4 {
-        font-size: 10px;
-        left: -3.5rem;
-    }
-}
-
-@media (max-width: 1023px) {
-    .navbar-nav {
-        margin-left: -9rem;
-    }
-}
-
-@media (max-width: 1016px) {
-    .navbar-nav {
-        margin-left: -8rem;
-    }
-
-    .navbar-brand {
-        margin-right: 2rem;
-    }
-}
-
-/* En el pixel "991" colapsa el nav para escritorio, y empieza el nav para móviles
-los cambios al "navbar-nav" de aquí para abajo, afectan al menú "sánduche" */
-
-@media (max-width: 991px) {
-    #align-hamburguesa {
-        position: relative;
-        left: -10%;
-    }
-    .brand-mobile {
-        width: 75%;
-
-    }
-
-    .bg-ketanolab {
-        background-position-x: 55%;
-        background-size: 80rem;
-    }
-
-    .navbar-brand {
-        margin-left: -3rem;
-    }
-    
-    /* Aquí cambio el espacio entre los botones del nav, y su ubicación */
-
-    .nav-link_1 {
-        border: 1px dashed skyblue;
-        position: relative;
-        top:0rem;
-        left: 34%;
-        width: 30rem;
-        height: 6rem;
-    }
-
-    .nav-link_2 {
-        border: 1px dashed skyblue;
-        position: relative;
-        top:0rem;
-        left: 34%;
-        width: 30rem;
-        height: 6rem;
-    }
-
-    .nav-link_3 {
-        border: 1px dashed skyblue;
-        position: relative;
-        top:0em;
-        left: 34%;
-        width: 30rem;
-        height: 6rem;
-    }   
-    .nav-link_4 {
-        border: 1px dashed skyblue;
-        position: relative;
-        top:0rem;
-        left: 34%;
-        width: 30rem;
-        height: 6rem;
-    }
-    
-    /* Aquí eliminamos la imagen de fondo en los botones del nav */
-
-    .nav-link-1 {
-        background: none;
-    }
-
-    .nav-link-2 {
-        background: none;
-    }
-
-    .nav-link-3 {
-        background: none;
-    }
-
-    .nav-link-4 {
-        background: none;
-    }       
-
-/* Aquí corregimos la posición del texto */
-
-    .text-nav-1 {
-        font-size: 21px;
-        top:-3rem;
-        left: 0rem;
-    }
-
-    .text-nav-2 {
-        font-size: 21px;
-        top:-2.7rem;
-        left: -3.2rem;
-    }
-
-    .text-nav-3 {
-        font-size: 21px;
-        top:-3rem;
-        left: -2.2rem;
-    }
-
-    .text-nav-4 {
-        font-size: 21px;
-        top:-3rem;
-        left: -3.2rem;
-    }
-}
-
-@media (max-width: 929px) {   
-    .bg-ketanolab {
-        background-position-x: 50%;
-        background-size: 70rem;       
-    }
-
-    .navbar-brand {
-        margin-left: 0rem;      
-    }
-}
-
-
-@media (max-width: 790px) {
-    
-    .brand-mobile {
-        width: 65%;
-    }
-
-    .navbar-brand {
-        margin-left: 1rem;      
-    }
-}
-
-@media (max-width: 767px) {
-    .bg-ketanolab {
-        background-position-y: -3rem;
-        background-position-x: 50%;
-        background-size: 50rem 15rem;       
-    }
-
-    .navbar-brand {
-        margin-left: 1.5rem;      
-    }
-}
-
-@media (max-width: 639px) {
-    
-    .brand-mobile {
-        width: 55%;
-    }
-    
-    .bg-ketanolab {
-        background-position-y: -9rem;
-        background-size: 50rem 25rem;       
-    }
-
-    .navbar-brand {
-        margin-left: -0.5rem;      
-    }
-}
-
-
-@media (max-width: 575px) {
-    
-    .bg-ketanolab {
-        background-position-y: -8.5rem;
-        background-size: 40rem 25rem;       
-    }
-
-
-    .navbar-brand {
-        margin-left: 2.7rem;      
-    }
-}
-
-@media (max-width: 570px) {
-
-    .navbar-brand {
-        margin-left: 2.6rem;      
-    }
-}
-
-@media (max-width: 560px) {
-
-    .navbar-brand {
-        margin-left: 2.2rem;      
-    }
-}
-
-@media (max-width: 550px) {
-
-    .navbar-brand {
-        margin-left: 1.9rem;      
-    }
-}
-
-@media (max-width: 540px) {
-
-    .navbar-brand {
-        margin-left: 1.6rem;      
-    }
 }
