Commit 14. Varios cambios realizados.

--- a/src/app/Components/aliados/aliados.component.css
+++ b/src/app/Components/aliados/aliados.component.css
@@ -1,3 +1,10 @@
+.fondo {
+    background-image: url(../../../assets/img/aliados.png);
+    background-repeat: no-repeat;
+    background-size: 100rem 44.3rem;
+    height: 44.3rem;
+}
+
 .container {
     margin-top: 10rem;
     justify-content: center;
