--- a/src/app/Components/inicio/inicio.component.html
+++ b/src/app/Components/inicio/inicio.component.html
@@ -23,7 +23,7 @@
                 </div>
                 <!-- Inicio satélite de blockchain -->
                 <a class="servicios-box-blockchain-1" href="/dapps">{{"BEGINNING.TITLE-11" | translate}}</a>
-                <a class="servicios-box-blockchain-2" href="/">{{"BEGINNING.TITLE-14" | translate}}</a>    
+                <a class="servicios-box-blockchain-2" href="/blockchain">{{"BEGINNING.TITLE-14" | translate}}</a>    
                 <!-- Fin de satélite de blockchain -->
             </div>
         </div>
