--- a/src/app/Components/aliados/aliados.component.html
+++ b/src/app/Components/aliados/aliados.component.html
@@ -1,7 +1,8 @@
 <app-nav></app-nav>
-<!-- Inicio container. -->
+<div class="container-fluid fondo">
 <!-- h1 -->
-<h1 class="text-center mb-12"> ALIADOS </h1>
+<h1 class="text-center"> ALIADOS </h1>
+<!-- Inicio Container Flex -->
 <div class="container d-flex">
   <!-- Inicio fila 1. -->
   <div class="row justify-content-center">
@@ -38,4 +39,5 @@
       </div>
     </div>
   </div>
+</div>
 </div>
