--- a/src/app/Components/home/home.component.css
+++ b/src/app/Components/home/home.component.css
@@ -1,9 +1,9 @@
 .home-container {
     background-image: url("../../../assets/img/Home/home.png");
-    background-size: 100rem 50rem;
+    background-size: 100rem 52rem;
     background-repeat: no-repeat;
     overflow: hidden;
-    max-height: 50rem; 
+    height: 52rem; 
 }
 
 /* Todo el logo*/
