AlexQuijote. Commit 15. No hay maores cambios, hago el commit a petición de Iván, para aportar cambios al background de la página aliados.
Fin del commit º5.

--- a/src/app/Components/aliados/aliados.component.css
+++ b/src/app/Components/aliados/aliados.component.css
@@ -1,8 +1,8 @@
 .fondo {
     background-image: url(../../../assets/img/aliados.png);
     background-repeat: no-repeat;
-    background-size: 100rem 44.3rem;
-    height: 44.3rem;
+    width: 100vw;
+    height: 100vh;
 }
 
 .container {
