--- a/src/app/Components/marketing/marketing.component.html
+++ b/src/app/Components/marketing/marketing.component.html
@@ -1,6 +1,24 @@
 <app-nav></app-nav>
-    <div class="container" (click)="estado=!estado">
-        <div *ngIf="estado" class="row justify-content-center">
+<div class="container">
+
+</div>    
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- <div class="container">
+        <div class="row justify-content-center">
             <div class="col-auto">
                 <div class="figura">
                     <p class="pt-6">{{"MARKETING.TITLE" | translate}}</p>
@@ -19,26 +37,4 @@
                     <li>{{"MARKETING.LIST-4" | translate}}</li>
                 </ul>
             </div>
-        </div>
-<!-- De aquí para abajo aparece la nueva parte, que se activa con el evento-->
-        <div *ngIf="!estado" class="row justify-content-center">
-            <div class="col-auto">
-                <div class="figura">
-                    <p class="pt-6">{{"MARKETING.TITLE" | translate}}</p>
-                </div>
-                <img src="../../../assets/img/markExp.svg" class="img1_v2" alt="">
-            </div>
-            <div class="offset-1 col-md-10 servicios-box">
-                <img style="width: 15em; height: 100em" src="../../../assets/img/marcoInter.png" class="img2" alt="">
-                <p class="  pt-4">{{"MARKETING.PARAGRAPH" | translate}}</p>
-                <p class=" pb-4 pt-6">{{"MARKETING.PARAGRAPH-1" | translate}}</p>
-                <ul class=" pb-4">
-                    <li>{{"MARKETING.LIST" | translate}}</li>
-                    <li>{{"MARKETING.LIST-1" | translate}}</li>
-                    <li>{{"MARKETING.LIST-2" | translate}}</li>
-                    <li>{{"MARKETING.LIST-3" | translate}}</li>
-                    <li>{{"MARKETING.LIST-4" | translate}}</li>
-                </ul>
-            </div>
-        </div>
-    </div>
+        </div> -->
