--- a/src/app/Components/nosotros/nosotros.component.html
+++ b/src/app/Components/nosotros/nosotros.component.html
@@ -2,13 +2,13 @@
   <!-- inicio container -->
   <div class="container"> 
     <!-- h1 -->
-    <h1 class="text-center mb-12"> {{"WE.TITLE" | translate}} </h1>
+    <h1 class="text-center mb-12 "> {{"WE.TITLE" | translate}} </h1>
     <!-- inicio fila 1 -->
     <div class="row">
       <!-- inicio columna 1 de fila 1 -->
-      <div class="col-md-4">
+      <div class="offset-2 col-md-3">
         <!-- inicio card de Roger. -->
-        <div class="card text-white ml-16">
+        <div class="card text-white">
           <img class="card-img" src="../../../assets/img/roger.png"   alt="Roger.">
           <div class="card-img-overlay">
             <h5 class="card-title">{{"WE.PERSON-1" | translate}}</h5>
@@ -19,9 +19,9 @@
         </div>
       </div>
       <!-- inicio columna 2 de fila 1 -->
-      <div class="col-md-4">
+      <div class="col-md-3">
         <!-- inicio card de Pedro. -->
-        <div class="card text-white ml-16">
+        <div class="card text-white">
           <img class="card-img" src="../../../assets/img/pedro.png"  alt="Pedro.">
           <div class="card-img-overlay">
             <h5 class="card-title">{{"WE.PERSON-2" | translate}}</h5>
@@ -32,9 +32,9 @@
         </div>
       </div>
       <!-- inicio columna 3 de fila 1 -->
-      <div class="col-md-4">
+      <div class="col-md-3">
         <!-- inicio card de Milenka. -->
-        <div  class="card text-white ml-16">
+        <div  class="card text-white">
           <img class="card-img" src="../../../assets/img/mile.jpg" alt="Milenka.">
           <div class="card-img-overlay"> 
             <h5 class="card-title">{{"WE.PERSON-3" | translate}}</h5>
