--- a/src/app/Components/nosotros/nosotros.component.css
+++ b/src/app/Components/nosotros/nosotros.component.css
@@ -4,8 +4,8 @@
     margin: 10px;
     min-width: 230px;
     max-width: 315px;
-    width: 100%;
-    height: 24rem;
+    width: 10rem;
+    height: 20rem;
     text-align: left;
     line-height: 1.4em;
     font-size: 16px;
